# DualArmRobot

./: .gitignore  README.md
CyberGear/: README.md  interactive_control.py
CyberGear/cpp_version/: README.md  cybergear_can_usb.cpp  cybergear_can_usb.h  cybergear_motor.cpp  cybergear_motor.h  python_bindings.cpp  setup.py
CyberGear/头部旋转电机-小米/: CyberGearmotor.stp  电机问题解决方案.docx
CyberGear/小米电机专用资料/CyberGear调试器/: config.xml
CyberGear/小米电机专用资料/CyberGear调试器/i18n/: zh_CN.qm
ZE300/: README.md  id_scan.py  interactive_control.py
ZE300/ZE300用户资料3.02_20250714/3.Modbus通信协议/: ModbusRTU寄存器表_V3.02b1_20250221.xlsx  ModbusRTU通信示例_20250714.xlsx  版本日志.txt
ZE300/ZE300用户资料3.02_20250714/3.Modbus通信协议/ModbusPoll文件/: Modbus_StartAddr0_V3.01.mbp  Modbus_StartAddr128_V3.01.mbp  备注.txt  (+5 more)
ZE300/ZE300用户资料3.02_20250714/6.上位机/: 日志.txt
ZE300/ZE300用户资料3.02_20250714/7.固件/: 日志.txt  重要提示.txt
ZE300/cpp_version/: README.md  python_bindings.cpp  setup.py  ze300_can_usb.cpp  ze300_can_usb.h  ze300_motor.cpp  ze300_motor.h
ino_motor/: README.md  brake_control.py  interactive_control_cpp.py
ino_motor/cpp_version/: CMakeLists.txt  README.md  Untitled  hw_can_usb.cpp  hw_can_usb.h  inovance_servo.cpp  inovance_servo.h  python_bindings.cpp  servo_test  servo_test.cpp  setup.py  test_python_bindings.py
ino_motor/cpp_version/examples/: fault_reset_test.cpp  position_test.cpp  velocity_test.cpp
ino_motor/cpp_version/prev/: hw_can.cpp  hw_can.h  hw_wire_control.cpp  hw_wire_control.h
ino_motor/py_test/: servo_driver_400.py  servo_driver_750.py
ino_motor/py_version/: servo_driver.py
